# YoonImage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
ConsoleTest/: CMakeLists.txt  main.cpp
YoonFactory/: CMakeLists.txt
YoonFactory/include/: buffer.h  enums.h  figure.h  line.h  rect.h
YoonFactory/src/: buffer.h  buffer1d.cpp  buffer2d.cpp  figure.h  line.h  matrix.h  triangle.h  vector.h
YoonImage/: CMakeLists.txt
YoonImage/include/: bitmap.h  bitmap_factory.h  enums.h  figure.h  image.h
YoonImage/include/yoonimage/: bitmap.hpp  figure.hpp  image.h  image.hpp  jpeg.hpp
YoonImage/src/: Image.cpp  Image.h  bitmap.cpp  bitmap_factory.cpp  enum.h  image.cpp  image.h
YoonImage/unittest/: main.cpp
include/yoonimage/: bitmap.hpp  image.hpp  jpeg.hpp
src/: Converter.cpp  Converter.h  Image.cpp  Image.h  bitmap.cpp  bitmap.h  enum.h  image.cpp
test/: CMakeLists.txt  main.cpp
unittest/: CMakeLists.txt  main.cpp
